tests/baselines/reference/typeCheckTypeArgument.errors.txt
tests/cases/compiler/typeCheckTypeArgument.ts(2,19): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(4,26): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(6,21): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(8,24): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(11,22): error TS2304: Cannot find name 'UNKNOWN'.
tests/cases/compiler/typeCheckTypeArgument.ts(14,13): error TS2304: Cannot find name 'UNKNOWN'.


==== tests/cases/compiler/typeCheckTypeArgument.ts (6 errors) ====
    
    var f: <T extends UNKNOWN>() => void;
                      ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    interface IFoo<T extends UNKNOWN> { }
                             ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo<T extends UNKNOWN> { }
                        ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    function bar<T extends UNKNOWN>() { }
                           ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    
    class Foo2 {
        method<T extends UNKNOWN>() { }
                         ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.
    }
    
    (<T extends UNKNOWN>(a) => { });
                ~~~~~~~
!!! error TS2304: Cannot find name 'UNKNOWN'.